--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "mobile-login-counter",
   "version": "0.1.0",
+  "author": "Mauricio Correa <frontend.mcu@gmail.com>",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@testing-library/jest-dom": "5.11.5",
+    "@testing-library/react": "11.1.1",
+    "@testing-library/user-event": "12.2.0",
+    "moment": "2.29.1",
+    "node-sass": "^4.14.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p start:app start:api",
+    "start:app": "react-scripts start",
+    "start:api": "json-server --port 3001 --watch users.json --delay 1500",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "0.16.2",
+    "npm-run-all": "4.1.5"
   }
 }
