--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "@testing-library/jest-dom": "5.11.5",
     "@testing-library/react": "11.1.1",
+    "@testing-library/react-hooks": "3.4.2",
     "@testing-library/user-event": "12.2.0",
     "moment": "2.29.1",
     "node-sass": "^4.14.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.0",
+    "react-test-renderer": "17.0.1",
     "web-vitals": "0.2.4"
   },
   "scripts": {
@@ -20,6 +22,7 @@
     "start:api": "json-server --port 3001 --watch users.json --delay 1500",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
