--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,23 +8,23 @@
       "type": "image/x-icon"
     },
     {
-      "src": "/img/logo192.png",
+      "src": "/images/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/img/logo512.png",
+      "src": "/images/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/img/maskable_icon.png",
+      "src": "/images/maskable_icon.png",
       "sizes": "196x196",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "start_url": "/?source=pwa",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
